--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Bun
-        shell: powershell
-        run: |
-          irm https://bun.sh/install | iex
-          echo "$HOME/.bun/bin" | Out-File -Append -Encoding utf8 $env:GITHUB_PATH
+        run: npm install -g bun
 
       - name: Install Rust and Tauri Dependencies
         shell: powershell
@@ -45,4 +42,3 @@ jobs:
         run: |
           Start-Process -NoNewWindow -FilePath "bun" -ArgumentList "run dev" -WorkingDirectory "./apps/web"
           Start-Process -NoNewWindow -FilePath "bun" -ArgumentList "run dev" -WorkingDirectory "./apps/server"
-
