--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,10 @@ jobs:
       - name: Build Packages
         run: bun run build:packages
 
+      - name: Debug Build Output
+        run: Get-ChildItem -Recurse
+        shell: powershell
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
