--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,16 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: x86_64-unknown-linux-gnu
+
+      - name: Install Tauri Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev
+
       - name: Install Dependencies
         run: bun install
 
@@ -32,7 +42,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: server-build
-          path: apps/server/dist
+          path: apps/server/dist/
+          if-no-files-found: error
           retention-days: 7
 
       # Upload web artifacts
@@ -40,5 +51,23 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: web-build
-          path: apps/web/dist
+          path: apps/web/dist/
+          if-no-files-found: error
+          retention-days: 7
+
+      # Build Tauri app
+      - name: Build Tauri
+        working-directory: apps/web
+        run: bun run build:desktop
+
+      # Upload Tauri artifacts
+      - name: Upload Tauri Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: tauri-build
+          path: |
+            apps/web/src-tauri/target/release/bundle/deb/*
+            apps/web/src-tauri/target/release/bundle/appimage/*
+            apps/web/src-tauri/target/release/audioling
+          if-no-files-found: error
           retention-days: 7
