--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,77 +1,102 @@
-name: Build and Upload Artifacts
+name: 'build-and-upload'
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
-
+on: 
+  workflow_dispatch
+  
 jobs:
   build:
-    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - platform: 'macos-latest' # for Arm based macs (M1 and above)
+            args: '--target aarch64-apple-darwin'
+          - platform: 'macos-latest' # for Intel based macs
+            args: '--target x86_64-apple-darwin'
+          - platform: 'ubuntu-22.04'
+            args: ''
+          - platform: 'windows-latest'
+            args: ''
+
+    runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - name: setup bun
+        uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
 
-      - name: Install Rust
+      - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: x86_64-unknown-linux-gnu
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
-      - name: Install Tauri Dependencies
+      - name: install dependencies (ubuntu only)
+        if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-3-dev \
-            libwebkit2gtk-4.1-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
-      - name: Install Dependencies
+      - name: install frontend dependencies
         run: bun install
 
-      - name: Build Packages
-        run: bun run build:packages
+      - name: build server binaries
+        if: matrix.platform != 'macos-latest'
+        run: bun run deploy:server
 
-      - name: Build Apps
-        run: bun run build:apps
+      - name: build server binaries (macos)
+        if: matrix.platform == 'macos-latest'
+        run: bun run deploy:server:macos
 
-      # Upload server artifacts
+      - name: Build Tauri App
+        uses: tauri-apps/tauri-action@v0.5.16
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          projectPath: './apps/web'
+          args: ${{ matrix.args }}
+          tauriScript: 'bun run tauri'
+
+      # Upload artifacts for each platform
       - name: Upload Server Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: server-build
+          name: server-${{ matrix.platform }}
           path: apps/server/dist/
           if-no-files-found: error
-          retention-days: 7
 
-      # Upload web artifacts
       - name: Upload Web Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: web-build
+          name: web-${{ matrix.platform }}
           path: apps/web/dist/
           if-no-files-found: error
-          retention-days: 7
 
-      # Build Tauri app
-      - name: Build Tauri
-        working-directory: apps/web
-        run: bun run build:desktop
-
-      # Upload Tauri artifacts
-      - name: Upload Tauri Artifacts
+      - name: Upload Tauri Artifacts (Windows)
+        if: matrix.platform == 'windows-latest'
         uses: actions/upload-artifact@v4
         with:
-          name: tauri-build
+          name: tauri-windows
+          path: apps/web/src-tauri/target/release/bundle/msi/*
+          if-no-files-found: error
+
+      - name: Upload Tauri Artifacts (macOS)
+        if: matrix.platform == 'macos-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: tauri-macos-${{ contains(matrix.args, 'aarch64') && 'arm64' || 'x64' }}
+          path: apps/web/src-tauri/target/release/bundle/dmg/*
+          if-no-files-found: error
+
+      - name: Upload Tauri Artifacts (Linux)
+        if: matrix.platform == 'ubuntu-22.04'
+        uses: actions/upload-artifact@v4
+        with:
+          name: tauri-linux
           path: |
             apps/web/src-tauri/target/release/bundle/deb/*
             apps/web/src-tauri/target/release/bundle/appimage/*
-            apps/web/src-tauri/target/release/audioling
           if-no-files-found: error
-          retention-days: 7
